# fastflight

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .safety-policy.json  CONFIGURATION.md  Dockerfile  README.md  TECHNICAL_DETAILS.md  TECHNICAL_DETAILS_chn.md  dev-requirements.txt  docker-compose.yml  noxfile.py  prod-requirements.txt  pyproject.toml  requirements-all.txt  requirements-extras.txt  requirements.txt  test-requirements.txt  test_async_duckdb.py  test_backend_types.py  test_ray_fallback.py
.github/workflows/: build.yml  bump_version.yml  code-quality.yml  dependency-update.yml  publish.yml
backend/: .pre-commit-config.yaml  noxfile.py  prod-requirements.txt  pyproject.toml  requirements.txt  test-requirements.txt
backend/config/: local.env  log-config.yaml
backend/schemas/: Allocation.json  Strategy.json  StrategyPerformanceParams.json  User.json
backend/scripts/: update_json_schemas.py
backend/src/my_fastapi/: main.py
backend/src/my_fastapi/internal/: flight_connection_pool.py  settings.py
backend/src/my_fastapi/internal/data_server/: client_helpers.py
backend/src/my_fastapi/internal/data_server/models/: base_ticket.py  data_source.py  tickets.py
backend/src/my_fastapi/internal/data_server/server/: flight_server.py
backend/src/my_fastapi/internal/data_server/services/: base_data_service.py  sql.py
backend/src/my_fastapi/internal/ui_form/: form_validator.py  types.py
backend/src/my_fastapi/routers/: arrow_flight.py  data_server.py  root.py  ui_form.py
backend/src/my_fastapi/utils/: custom_logging.py
backend/tests/: test_base_ticket.py  test_main.py  test_ui_form.py
config/: log-config.yaml
demo/: Dockerfile  __init__.py  main.py
demo/data_services/: csv_file.py  mock_data.py
demo/dependencies/: settings.py
demo/flight_service/services/: csv_file.py  nosql.py  sql.py
demo/internal/: settings.py
demo/internal/flight_service/models/: params.py
demo/internal/flight_service/services/: csv_file.py  nosql.py  sql.py
demo/routers/: flight.py  ui_form.py
demo/tests/: test_main.py  test_params.py  test_ui_form.py
demo/utils/: custom_logging.py
docker/: Dockerfile  healthcheck.sh
docs/: CLI_USAGE.md  CONFIGURATION_CONTROL.md  ERROR_HANDLING.md  TECHNICAL_DETAILS.md  TIME_SERIES_DISTRIBUTED.md
examples/: distributed_config_examples.py  http_flight_requests.py  pyproject.toml  timeseries_distributed_example.py
examples/benchmark/: README.md  client.py  mock_data_service.py  plot_benchmark_results.py  pyproject.toml  run_benchmark.py  server.py  server_async.py  server_sync.py  start_flight_server.py  start_flight_server_async.py
examples/benchmarking/: client.py  server.py
examples/data_services/: csv_file.py  duckdb_example.py  mock_data.py
examples/demo_data_services/: duckdb_example.py
examples/fastapi_app/: main.py  pyproject.toml
examples/fastapi_integration/: README.md  demo_grpc_requests.py  demo_http_requests.py  mock_data_service.py  start_fastapi_server.py
examples/multi_protocol_demo/: README.md  run_demo.py  start_flight_server.py  start_rest_server.py
examples/multi_protocol_demo/demo_services/: csv_demo.py  duckdb_demo.py  sqllite_demo.py
frontend/: .pre-commit-config.yaml  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/.storybook/: preview.ts
frontend/scripts/: convert_to_zod_schema.sh
frontend/src/: App.tsx
frontend/src/dev/: palette.tsx
frontend/src/forms/: BespokeForm.stories.tsx  BespokeForm.tsx
frontend/src/schema-form/: SchemaForm.stories.tsx  SchemaForm.tsx
frontend/src/schema-form/components/: FormItem.tsx  Select.tsx  Switch.tsx  TextField.tsx  index.ts
frontend/src/schems/: Allocation.ts  Strategy.ts  StrategyPerformanceParams.ts  User.ts
my-nextjs/: components.json  package-lock.json  package.json
scripts/: update_json_schemas.py
src/fastflight/: __init__.py  cli.py  client.py  config.py  data_service_base.py  exceptions.py  flight_client.py  flight_server.py  main.py  metrics.py  resilience.py  security.py  server.py  test_logging.py
src/fastflight/benchmark/: benchmark_duckdb.py
src/fastflight/core/: __init__.py  base.py  distributed.py  optimization.py  timeseries.py
src/fastflight/data_services/: __init__.py  csv_file.py  data_service.py  duckdb_parquet_service.py  duckdb_service.py  sql_service.py
src/fastflight/demo_services/: duckdb_demo.py  echo_demo.py
src/fastflight/dependencies/: settings.py
src/fastflight/fastapi/: README.md  api_router.py  app.py  dependencies.py  lifespan.py  router.py  security.py
src/fastflight/fastapi_integration/: app.py  lifespan.py  router.py
src/fastflight/internal/ui_form/: form_validator.py
src/fastflight/models/: base_params.py
src/fastflight/resilience/: __init__.py
src/fastflight/resilience/config/: __init__.py  circuit_breaker.py  resilience.py  retry.py
src/fastflight/resilience/core/: circuit_breaker.py  manager.py
src/fastflight/routers/: flight.py  root.py  ui_form.py
src/fastflight/server/: flight_server.py
src/fastflight/services/: base.py  base_data_service.py  base_params.py  data_sources.py  demo_service.py  sql_service.py
src/fastflight/utils/: client_helpers.py  custom_logging.py  flight_client.py  flight_server.py  stream_utils.py  streams.py  utils.py
src/my_fastapi/: __init__.py  main.py  test_main.py
src/my_fastapi/dependencies/: settings.py
src/my_fastapi/routers/: data_server.py  data_service.py  pd_data.py  root.py  ui_form.py
src/my_fastapi/utils/: custom_logging.py  error_handling.py
tests/: base_cases.py  test_base_ticket.py  test_config.py  test_data_service.py  test_error_handling.py  test_fastapi_auth.py  test_flight_auth.py  test_flight_client.py  test_health_check.py  test_integration_auth.py  test_main.py  test_metrics.py  test_params.py  test_stream_utils.py  test_timeseries_params.py  test_ui_form.py
tests/core/: test_distributed.py  test_optimization.py  test_timeseries.py
tests/utils/stream_utils/: test_async_to_sync_converter_performance.py  test_read_table_from_stream.py  test_write_arrow_data_to_stream.py
(+24 files in other folders)
