[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastflight"
authors = [{ name = "Chao Ning", email = "chao.ning.uk@gmail.com" }]
description = "FastFlight is a high-performance data transfer framework that integrates Apache Arrow Flight to fetch and stream large-scale data from multiple sources, using a modular, pluggable architecture for various data services, and offers optional FastAPI integration for HTTP-based access."
version = "0.4.0"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "pandas",
    "pyarrow>=14.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.15.2"
]
duckdb = [
    "duckdb"
]
fastapi = [
    "fastapi[standard]"
]
structlog = [
    "structlog"
]
examples = [
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "httpx",
    "rich",
    "sqlalchemy>=2.0.38"
]
all = [
    "typer>=0.15.2",
    "duckdb",
    "fastapi[standard]",
    "structlog",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "httpx",
    "rich",
    "sqlalchemy>=2.0.38"
]

[project.scripts]
fastflight = "fastflight.cli:cli"

[dependency-groups]
dev = [
    "mypy",
    "pandas-stubs>=2.2.3.241126",
    "pre-commit",
    "pyarrow-stubs>=17.17",
    "pytest",
    "pytest-asyncio>=0.25.3",
    "pytest-cov",
    "ruff",
    "bandit[toml]>=1.8.3",
]

[tool.ruff]
line-length = 120
src = ["src", "tests", "examples"]

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable isort (`I`)
extend-select = ["I"]
isort.split-on-trailing-comma = false


[tool.bandit]
# Paths to exclude from scanning
exclude_dirs = ["tests", "examples"]

# Test IDs to skip
skips = [
    "B104", # hardcoded_bind_all_interfaces - CLI defaults are acceptable for development
    "B110", # try_except_pass - Some cleanup code legitimately needs silent error handling
    "B311", # Standard pseudo-random generators - acceptable for non-cryptographic jitter in retry logic
]

# Only report medium and high severity issues in CI
severity = "medium"

[tool.bandit.assert_used]
# Allow asserts in test files (if we scan them)
skips = ["*test*.py", "*tests*.py"]
