[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_fastapi"
authors = [{ name = "Chao Ning", email = "chao.ning.uk@gmail.com" }]
description = "My fastapi app"
version = "0.0.1"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = ["email-validator", "fastapi[all]>=0.110.2", "pydantic>=2.0", "pandas", "pyarrow>=14.0.0", "structlog"]

[project.optional-dependencies]
dev = ["jupyterlab", "pre-commit", "uv", "rich"]
test = ["nox", "pytest", "pytest-cov"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable isort (`I`)
extend-select = ["I"]
