[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastflight_demo"
authors = [{ name = "Chao Ning", email = "chao.ning.uk@gmail.com" }]
description = "Demo of FastFlight, including benchmarking of synchronous and asynchronous I/O performance."
version = "0.1.0"
readme = "README.md"
requires-python = ">= 3.11"
dependencies = ["fastflight", "matplotlib", "psutil", "seaborn"]
